Closed Bug 1271164 Opened 10 years ago Closed 10 years ago

Crash in gfxUserFontSet::UserFontCache::Entry::ReportMemory

Categories

(Core :: Graphics: Text, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: n.nethercote, Assigned: n.nethercote)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-ed2ab529-a09d-4a97-820a-e08542160507. ============================================================= Looks like a straightforward missing null check in new memory reporting code.
Assignee: nobody → n.nethercote
Status: NEW → ASSIGNED
Comment on attachment 8750132 [details] [diff] [review] Add a missing null check in user font memory reporting Review of attachment 8750132 [details] [diff] [review]: ----------------------------------------------------------------- Oops, yes. Thanks for fixing!
Attachment #8750132 - Flags: review?(jfkthame) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/c93401d022f5843ba19a2b8c6d590a9249cc3dfe Bug 1271164 - Add a missing null check in user font memory reporting. r=jfkthame.
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Blocks: 1268021
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: