Bug 1271164 - Add a missing null check in user font memory reporting. r=jfkthame.